[package]
name = "style-checker"
version = "1.0.0-rc.1"
edition = "2021"
authors = ["Sam Christy"]
description = "An extremely opinionated linter that I use to enforce programming style."
license = "GPL-3.0-or-later"
repository = "https://github.com/samchristywork/style-checker"
readme = "README.md"
keywords = ["linter", "style", "opinionated"]
categories = ["development-tools::linters"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
yaml-rust = "0.4"
